--- a/index.html
+++ b/index.html
@@ -69,13 +69,23 @@ textarea{resize:vertical}
       <div class="small muted" style="margin-top:10px">Données locales (localStorage). Clés utilisées : <code>lmc_*</code>.</div>
     </div>
     <div style="width:340px;display:flex;flex-direction:column;gap:12px">
-      <div class="card"><strong>Prochains events</strong><div class="small muted" style="margin-top:8px">Tournoi Brawl — Dimanche 20h</div></div>
+      <div class="card"><strong>Prochains events</strong><div class="small muted" style="margin-top:8px">Pas d'events</div></div>
       <div class="card"><strong>Rôles VIP</strong><div class="small muted" style="margin-top:8px">Accès salon VIP & avantages</div></div>
     </div>
   </section>
 
   <!-- ABOUT -->
-  <section id="about" class="card"><h2>À propos</h2><p>Notre serveur est un espace où règnent la bonne humeur et le respect. Viens partager, aider ou juste chill.</p></section>
+  <section id="about" class="card"><h2>À propos</h2><p>Salut à toi ! Tu cherches un endroit pour te détendre et t'amuser ? Bienvenue sur JUSTE DES MECS CHILLS, MAIS ENCORE PLUS COOL !
+
+Tu kiffes Brawl Stars ? Alors tu vas adorer notre serveur ! Nous t'avons concocté une catégorie dédiée à Brawl Stars rien que pour toi. Mais ce n'est pas tout : tu trouveras également une catégorie pour tous les autres jeux vidéo qui t'intéressent, ainsi qu'une section Sport pour exprimer toutes tes passions.
+
+Chez nous, l'ambiance est au top, le respect et le fun sont garantis. Découvre nos rôles exclusifs à débloquer chaque jour et, surtout, rejoins les copains et copines prêts à tout déchirer avec toi !
+
+Notre serveur est super développé et prêt à t’accueillir comme il se doit. Nous organisons des évents réguliers à chaque palier de membres pour encore plus de fun !
+
+Ici, chaque membre compte : fais des suggestions, donne ton avis, et mets l’ambiance à ta manière ! Parle de tout, de rien, rigole et profite dans un espace chill où tout le monde est le bienvenu.
+
+Rejoins-nous maintenant et deviens plus chill que jamais !</p></section>
 
   <!-- ROLES -->
   <section id="roles" class="card">
