--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             </div>
 
             <footer class="text-center mt-8 p-4 bg-indigo-900/40 rounded-lg">
-                <p class="text-xl font-bold text-indigo-300">Rendez-vous **CE SOIR** pour la réouverture avec le nouveau Système de Points d'Engagement !</p>
+                <p class="text-xl font-bold text-indigo-300">Rendez-vous le 11/10, le soir pour la réouverture avec le nouveau Système de Points d'Engagement !</p>
             </footer>
         </section>
 
